--- a/android_search/res/layout-v21/row_vha_chat.xml
+++ b/android_search/res/layout-v21/row_vha_chat.xml
@@ -1,32 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:gravity="right|top"
      >
 
-    <LinearLayout 
-        android:id="@+id/chat_bubble"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:background="@drawable/chat_bubble_blue"
-        android:orientation="vertical"    
-        android:layout_marginRight="2dp"
-        android:layout_marginLeft="2dip"
-        android:layout_marginTop="4dp"
-        >
-         <TextView
+    <com.virtual_hotel_agent.search.util.ChatBalloon
+        android:id="@+id/chat_bubble" 
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:animateLayoutChanges="true"
+          android:elevation="3dp"
+          android:layout_gravity="right|top"
+          android:layout_marginLeft="20dp"
+          android:layout_marginBottom="6dp"
+          android:layout_marginTop="4dp"
+          app:pointerSide="Right"
+          app:pointerColor="#03A9F4"
+           >
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:orientation="vertical"
+        android:padding="10dp" >
+
+        <TextView
             android:id="@+id/label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_gravity="left"
             
             android:layout_margin="2dip"
             android:textSize="16sp"
             android:textColor="@color/vha_chat_text" />
-
-         
-         <RelativeLayout
+    
+        <RelativeLayout
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
             >
@@ -65,7 +77,21 @@
 	            android:layout_alignParentBottom="true"
 	            android:textColor="@color/vha_chat_secondary_text" />
         </RelativeLayout>
-   </LinearLayout>
-    
+    </LinearLayout>
+    </com.virtual_hotel_agent.search.util.ChatBalloon>
      
-</RelativeLayout>
+     <!-- 
+    <TextView
+        android:id="@+id/label"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_toLeftOf="@+id/right_pane"
+        android:paddingBottom="2dip"
+        android:paddingLeft="3dip"
+        android:paddingRight="3dip"
+        android:textColor="@color/vha_chat_in_session_text"
+        android:textSize="16sp" />
+         -->
+
+
+</LinearLayout>
