--- a/android_search/res/menu/mainmenu.xml
+++ b/android_search/res/menu/mainmenu.xml
@@ -15,7 +15,7 @@
     <item
         android:id="@+id/restart_button"
         android:title="@string/new_session"
-        android:icon="@drawable/session_restart"
+        android:icon="@drawable/trash_icon"
         app:showAsAction="always">
     </item>
       
