saving chat session outside SearchByVoiceActivity, visual hint for undo and reset session, moved manifest changes from app to sdk lib

--- a/EvaSDK/sdk/src/main/res/values/styles.xml
+++ b/EvaSDK/sdk/src/main/res/values/styles.xml
@@ -1,9 +1,12 @@
 <resources>
 
-    <!-- Base application theme. -->
     <!--<style name="AppTheme" parent="Theme.AppC ompat.Light.DarkActionBar">-->
-    <style name="AppTheme" parent="android:Theme.Black">
+    <style name="AppTheme.Base" parent="android:Theme.Black">
         <!-- Customize your theme here. -->
+    </style>
+    <!-- Base application theme. -->
+
+    <style name="AppTheme" parent="AppTheme.Base">
     </style>
 
 </resources>
