--- a/EvaSDK/sdk/src/main/res/layout/evature_chat_layout.xml
+++ b/EvaSDK/sdk/src/main/res/layout/evature_chat_layout.xml
@@ -62,6 +62,7 @@
         android:elevation="8dp"
         android:scaleType="fitXY"
         android:background="@drawable/evature_transition_button_activate"
+        android:transitionName="eva_microphone_button"
         android:src="@drawable/evature_microphone_icon"
          />
      
@@ -102,18 +103,37 @@
 <!--         android:visibility="gone" /> -->
     
     </FrameLayout>
-    
-        
-     
+
+
+    <FrameLayout
+        android:layout_width="76dp"
+        android:layout_height="76dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="22dp"
+        android:layout_marginRight="28dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        >
+        <ImageView
+            android:layout_width="76dp"
+            android:layout_height="76dp"
+            android:elevation="5dp"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
+            android:scaleX="0.48"
+            android:scaleY="0.48"
+            android:alpha="0.3"
+            android:src="@drawable/evature_trash"
+            />
+
+
      <ImageButton
          android:id="@+id/restart_button"
          style="?android:attr/buttonStyleSmall"
          android:layout_width="76dp"
          android:layout_height="76dp"
-         android:layout_alignParentBottom="true"
-         android:layout_alignParentRight="true"
-         android:layout_marginBottom="22dp"
-         android:layout_marginRight="28dp"
+
          android:onClick="buttonClickHandler"
          android:adjustViewBounds="true"
          android:scaleType="fitCenter"
@@ -126,30 +146,48 @@
          android:elevation="6dp"
          android:visibility="invisible"
            />
-     
-     
-     <ImageButton
-         android:id="@+id/undo_button"
-         style="?android:attr/buttonStyleSmall"
-         android:layout_width="76dp"
-         android:layout_height="76dp"
-         android:layout_alignParentBottom="true"
-         android:layout_alignParentLeft="true"
-         android:layout_marginBottom="22dp"
-         android:layout_marginLeft="28dp"
-         android:onClick="buttonClickHandler"
-         android:adjustViewBounds="true"
-         android:scaleType="fitCenter"
-         android:scaleX="0.64"
-         android:scaleY="0.64"
-         android:background="@drawable/evature_custom_button"
-         android:contentDescription="Undo"
-         android:src="@drawable/evature_undo"
-         android:padding="12dp"
-         android:elevation="6dp"
-         android:visibility="invisible"
-           />
-    
+    </FrameLayout>
+
+
+    <FrameLayout
+        android:layout_width="76dp"
+        android:layout_height="76dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginBottom="22dp"
+        android:layout_marginLeft="28dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        >
+        <ImageView
+            android:layout_width="76dp"
+            android:layout_height="76dp"
+            android:elevation="5dp"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
+            android:scaleX="0.48"
+            android:scaleY="0.48"
+            android:alpha="0.3"
+            android:src="@drawable/evature_undo"
+            />
+        <ImageButton
+             android:id="@+id/undo_button"
+             style="?android:attr/buttonStyleSmall"
+             android:layout_width="76dp"
+             android:layout_height="76dp"
+             android:onClick="buttonClickHandler"
+             android:adjustViewBounds="true"
+             android:scaleType="fitCenter"
+             android:scaleX="0.64"
+             android:scaleY="0.64"
+             android:background="@drawable/evature_custom_button"
+             android:contentDescription="Undo"
+             android:src="@drawable/evature_undo"
+             android:padding="12dp"
+             android:elevation="6dp"
+             android:visibility="invisible"
+               />
+    </FrameLayout>
     
   
 </RelativeLayout>
