--- a/EvaSDK/sdk/src/main/res/layout/voice_search_button.xml
+++ b/EvaSDK/sdk/src/main/res/layout/voice_search_button.xml
@@ -6,9 +6,9 @@
              android:layout_marginBottom="12dp"
              android:layout_marginTop="12dp"
              android:padding="0dp"
-             android:adjustViewBounds="false"
+             android:adjustViewBounds="true"
              android:elevation="8dp"
-             android:scaleType="fitXY"
+             android:scaleType="fitCenter"
              android:background="@drawable/evature_transition_button_activate"
              android:src="@drawable/evature_microphone_icon"
     >
