fixed TTS when EvaChat is in fragment

--- a/EvaSDK/sdk/src/main/res/values/ids.xml
+++ b/EvaSDK/sdk/src/main/res/values/ids.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <item name="evature_chat_row_holder" type="id"/>
+    <item name="evature_root_view" type="id" />
 </resources>
