--- a/EvaSDK/sdk/src/main/res/anim-v21/reverse_mic_top_path_morph.xml
+++ b/EvaSDK/sdk/src/main/res/anim-v21/reverse_mic_top_path_morph.xml
@@ -2,7 +2,7 @@
      <objectAnimator
          android:duration="450"
          android:propertyName="pathData"
-         android:valueFrom="@string/flat_microphone_top"
-         android:valueTo="@string/microphone_top"
+         android:valueFrom="@string/evature_flat_microphone_top"
+         android:valueTo="@string/evature_microphone_top"
          android:valueType="pathType"/>
  </set>
