--- a/EvaSDK/sdk/src/main/res/layout-v21/evature_row_eva_chat.xml
+++ b/EvaSDK/sdk/src/main/res/layout-v21/evature_row_eva_chat.xml
@@ -36,7 +36,7 @@
             
             android:layout_margin="2dip"
             android:textSize="16sp"
-            android:textColor="@color/eva_chat_text" />
+            android:textColor="@color/evature_chat_text" />
     
         <RelativeLayout
 	        android:layout_width="wrap_content"
@@ -75,7 +75,7 @@
 		        android:layout_marginBottom="4dp"
 	            android:textSize="12sp"
 	            android:layout_alignParentBottom="true"
-	            android:textColor="@color/eva_chat_secondary_text" />
+	            android:textColor="@color/evature_chat_secondary_text" />
         </RelativeLayout>
     </LinearLayout>
     </com.evature.evasdk.ChatBalloon>
