--- a/EvaSDK/evasdk/src/main/res/layout-v21/evature_row_user_chat.xml
+++ b/EvaSDK/evasdk/src/main/res/layout-v21/evature_row_user_chat.xml
@@ -7,7 +7,7 @@
     android:paddingTop="4dp"
      >
 
-      <com.evature.evasdk.ChatBalloon
+      <com.evature.evasdk.user_interface.ChatBalloon
           android:id="@+id/chat_bubble" 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
@@ -84,5 +84,5 @@
 	      </RelativeLayout>
 
 	      </LinearLayout>
- 	</com.evature.evasdk.ChatBalloon>
+ 	</com.evature.evasdk.user_interface.ChatBalloon>
 </LinearLayout>
