--- a/EvaSDK/evasdk/src/main/res/layout/evature_chat_layout.xml
+++ b/EvaSDK/evasdk/src/main/res/layout/evature_chat_layout.xml
@@ -65,7 +65,7 @@
          />
      
      
-    <com.evature.evasdk.evaapis.android.SoundLevelView
+    <com.evature.evasdk.user_interface.SoundLevelView
         android:id="@+id/surfaceView_sound_wave"
         android:layout_width="72dp"
         android:layout_height="72dp"
@@ -74,7 +74,7 @@
         android:visibility="gone"
          />
 
-    <com.evature.evasdk.ProgressWheel
+    <com.evature.evasdk.user_interface.ProgressWheel
 		        android:id="@+id/progressBarEvaProcessing"
 		        android:layout_width="76dp"
 		        android:layout_height="76dp"
