--- a/EvaSDK/evasdk/src/main/res/layout/evature_row_filler.xml
+++ b/EvaSDK/evasdk/src/main/res/layout/evature_row_filler.xml
@@ -3,7 +3,7 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-        android:listSelector="@android:color/transparent"
+        android:listSelector="@null"
         android:focusableInTouchMode="false"
         android:focusable="false"
         android:clickable="false"
@@ -13,7 +13,6 @@
         android:id="@+id/view1"
         android:layout_width="wrap_content"
         android:layout_height="125dip"
-        android:listSelector="@android:color/transparent"
         android:focusableInTouchMode="false"
         android:focusable="false"
         android:visibility="invisible"
