bugs fixed: trigger button wrong size, momentary jump glitch, removed orange list selector, fixed missing icon in pre-lollipop.  refactored layout of chat overlay and trigger button layout params

--- a/EvaSDK/evasdk/src/main/res/layout/evature_chat_layout.xml
+++ b/EvaSDK/evasdk/src/main/res/layout/evature_chat_layout.xml
@@ -36,8 +36,7 @@
         android:drawSelectorOnTop="true"
         android:stackFromBottom="false"
         android:transcriptMode="normal"
-        android:listSelector="@null"
-        
+        android:listSelector="@android:color/transparent"
         android:cacheColorHint="@android:color/transparent" 
         >
     </ListView>
