--- a/EvaSDK/evasdk/src/main/res/layout/evature_row_eva_chat.xml
+++ b/EvaSDK/evasdk/src/main/res/layout/evature_row_eva_chat.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:listSelector="@null"
+    android:listSelector="@android:color/transparent"
      >
 
     <LinearLayout 
@@ -13,16 +13,17 @@
         android:background="@drawable/evature_chat_bubble_blue"
         android:orientation="vertical"    
         android:layout_marginRight="2dp"
-        android:layout_marginLeft="2dip"
-        android:layout_marginTop="4dp"
+        android:layout_marginLeft="2dp"
+        android:layout_marginTop="-2dp"
+        android:listSelector="@android:color/transparent"
         >
          <TextView
             android:id="@+id/label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="left"
-            
-            android:layout_margin="2dip"
+            android:layout_gravity="left|center_vertical"
+            android:layout_marginLeft="2dip"
+            android:layout_marginRight="2dip"
             android:textSize="16sp"
             android:textColor="@color/evature_chat_text" />
 
