--- a/EvaSDK/evasdk/src/main/res/layout/evature_row_user_chat.xml
+++ b/EvaSDK/evasdk/src/main/res/layout/evature_row_user_chat.xml
@@ -3,7 +3,7 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:listSelector="@null"
+    android:listSelector="@android:color/transparent"
      >
 
       <LinearLayout
@@ -12,7 +12,7 @@
           android:layout_height="wrap_content"
           android:layout_marginLeft="2dip"
           android:layout_marginRight="2dip"
-          android:layout_marginTop="4dip"
+          android:layout_marginTop="-2dip"
           android:background="@drawable/evature_chat_bubble_white"
           android:orientation="horizontal" >
 <!--           android:animateLayoutChanges="true" -->
@@ -21,9 +21,10 @@
 	            android:id="@+id/label"
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
-	            android:layout_gravity="center"
+                android:layout_gravity="left|center_vertical"
 	            android:visibility="gone"
-	            android:layout_margin="2dip"
+	            android:layout_marginLeft="2dip"
+                android:layout_marginRight="2dip"
 	            android:textSize="16sp"
 	            android:text="Lorem ipsum bla bla asdfg dfswe"
 	            android:textColor="@android:color/primary_text_light" />
