--- a/EvaSDK/evasdk/src/main/res/layout/evature_voice_search_button.xml
+++ b/EvaSDK/evasdk/src/main/res/layout/evature_voice_search_button.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ImageButton xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_gravity="center_horizontal"
-             android:layout_width="76dp"
-             android:layout_height="76dp"
-             android:layout_marginBottom="12dp"
-             android:layout_marginTop="12dp"
-             android:padding="0dp"
-             android:adjustViewBounds="true"
-             android:elevation="8dp"
-             android:scaleType="fitCenter"
-             android:background="@drawable/evature_transition_button_activate"
-             android:src="@drawable/evature_microphone_icon"
+    android:layout_width="76dp"
+    android:layout_height="76dp"
+     android:padding="0dp"
+     android:adjustViewBounds="true"
+     android:elevation="8dp"
+     android:scaleType="fitXY"
+     android:background="@drawable/evature_transition_button_activate"
+     android:src="@drawable/evature_microphone_icon"
     >
 </ImageButton>
+    <!--android:layout_gravity="center_horizontal"-->
+    <!--android:layout_centerInParent="true"-->
+    <!--android:layout_marginBottom="24dp"-->
+    <!--android:layout_marginTop="12dp"-->
