fix crash in undo, rename barWidth attribute to avoid collision

--- a/EvaSDK/evasdk/src/main/res/layout/evature_chat_layout.xml
+++ b/EvaSDK/evasdk/src/main/res/layout/evature_chat_layout.xml
@@ -80,7 +80,7 @@
 		        ProgressWheel:textSize="14sp"
 		        ProgressWheel:barLength="8dp" 
 		        ProgressWheel:barColor="#ffffff"
-		        ProgressWheel:barWidth="5dp"
+		        ProgressWheel:pwBarWidth="5dp"
 		        ProgressWheel:rimWidth="0dp" 
 		        ProgressWheel:spinSpeed="3dp"
 		        ProgressWheel:barSizeChange="true"
