--- a/EvaSDK/evasdk/src/main/res/values/attrs.xml
+++ b/EvaSDK/evasdk/src/main/res/values/attrs.xml
@@ -12,7 +12,7 @@
         <attr name="delayMillis" format="integer" />
         <attr name="circleColor" format="color" />
         <attr name="radius" format="dimension" />
-        <attr name="barWidth" format="dimension" />
+        <attr name="pwBarWidth" format="dimension" />
         <attr name="barLength" format="dimension" />
         <attr name="contourColor" format="color"/>
         <attr name="contourSize" format="dimension"/>
