--- a/EvaSDK/exampleApp/src/main/res/xml/pref_credentials.xml
+++ b/EvaSDK/exampleApp/src/main/res/xml/pref_credentials.xml
@@ -6,6 +6,7 @@
         android:maxLines="1"
         android:selectAllOnFocus="true"
         android:singleLine="true"
+        android:defaultValue="evadev"
         android:title="@string/pref_credentials_site_code"/>
 
     <EditTextPreference
@@ -14,6 +15,16 @@
         android:maxLines="1"
         android:selectAllOnFocus="true"
         android:singleLine="true"
+        android:defaultValue="c61da182-868c-4f1b-a291-a70fc79fd8d2"
         android:title="@string/pref_credentials_api_key"/>
+
+    <EditTextPreference
+        android:inputType="textUri"
+        android:key="vproxy_url"
+        android:maxLines="1"
+        android:selectAllOnFocus="true"
+        android:singleLine="true"
+        android:defaultValue="http://ec2-54-163-49-61.compute-1.amazonaws.com:8000"
+        android:title="@string/pref_vproxy_url" />
 
 </PreferenceScreen>
