--- a/EvaSDK/evasdk/src/main/res/values/colors.xml
+++ b/EvaSDK/evasdk/src/main/res/values/colors.xml
@@ -2,7 +2,9 @@
 <resources>
     <color name="evature_times_markup">#4CAF50</color>
     <color name="evature_locations_markup">#03A9F4</color>
+    <color name="evature_hotel_attr_markup">#F4A903</color>
     <color name="evature_chat_background">#DD000000</color>
     <color name="evature_chat_text">#f5f5f5</color>
     <color name="evature_chat_secondary_text">#d5d5df</color>
+    <color name="evature_text_muted">#7d7d7d</color>
 </resources>
