--- a/EvaSDK/exampleApp/src/main/res/layout/content_main.xml
+++ b/EvaSDK/exampleApp/src/main/res/layout/content_main.xml
@@ -24,8 +24,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/mainTextView"
-        android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true">
+        <!--android:layout_alignParentStart="true"-->
 
 
     </ExpandableListView>
